--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,10 @@
         "require": {
                 "php": ">=5.3.0"
         },
+        "require-dev": {
+                "mockery/mockery": "0.9",
+                "phpunit/phpunit": "4.8.*"
+        },
         "autoload": {
                 "classmap": ["src"]
         }
