--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
         "name": "atk14/menu14",
         "type": "library",
         "description": "Menu14 is a menu generator designated for ATK14 applications",
-        "keywords": ["menu","atk14"],
+        "keywords": ["menu","breadcrumbs","navigation","atk14"],
         "homepage": "https://github.com/atk14/Menu14",
         "license": ["MIT"],
         "authors": [
@@ -12,7 +12,7 @@
                 }
         ],
         "require": {
-                "php": ">=5.3.0"
+                "php": ">=5.4.0"
         },
         "require-dev": {
                 "mockery/mockery": "0.9",
