[Travis] Testing in PHP from 5.4 to 7.4

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
                 "php": ">=5.3.0"
         },
         "require-dev": {
+                "atk14/tester": "*",
                 "mockery/mockery": "0.9",
                 "phpunit/phpunit": "4.8.*"
         },
