--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,23 @@
 # vim:ts=2:sw=2:et
-dist: trusty
+os: linux
+
+# Partner Queue Solution, no credits are consumed
+arch: ppc64le
+
+dist: xenial
 
 language: php
 
 php:
-  - 5.4
-  - 5.5
   - 5.6
   - 7.0
   - 7.1
   - 7.2
   - 7.3
   - 7.4
+  - 8.0
 
-before_script:
+before_install:
   - composer update --dev
 
 script:
