--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
                 }
         ],
         "require": {
-                "php": ">=5.3.0"
+                "php": "^5.3|^7.0"
         },
         "require-dev": {
-                "atk14/tester": "*",
+                "atk14/tester": "0.4|0.4.*",
                 "mockery/mockery": "^0.9.11|1.0.*|1.1.*"
         },
         "autoload": {
