--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,16 @@ jobs:
       dist: focal
     - php: 8.1
       dist: focal
+    - name: "PHP 8.2"
+      dist: jammy
+      language: ruby # This makes no sence to me, but it works!
+      before_install:
+        - sudo apt install software-properties-common
+        - sudo add-apt-repository ppa:ondrej/php
+        - sudo apt update
+        - sudo apt install php8.2 php8.2-mbstring
+        - php -v
+        - composer require "phpunit/phpunit=^7.5" "atk14/tester=^0.4" --ignore-platform-reqs
 
 # Here, we need to be phpunit/phpunit=^7.5 installed even for PHP8 for which it is not compatible
 before_install:
