--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ jobs:
       dist: focal
     - php: 8.1
       dist: focal
-    - name: "PHP 8.2"
+    - name: "PHP: 8.2"
       dist: jammy
       language: ruby # This makes no sence to me, but it works!
       before_install:
@@ -33,11 +33,20 @@ jobs:
         - sudo apt update
         - sudo apt install php8.2 php8.2-mbstring
         - php -v
-        - composer require "phpunit/phpunit=^7.5" "atk14/tester=^0.4" --ignore-platform-reqs
+        - composer update --dev
+    - name: "PHP: 8.3"
+      dist: jammy
+      language: ruby # This makes no sence to me, but it works!
+      before_install:
+        - sudo apt install software-properties-common
+        - sudo add-apt-repository ppa:ondrej/php
+        - sudo apt update
+        - sudo apt install php8.3 php8.3-mbstring
+        - php -v
+        - composer update --dev
 
-# Here, we need to be phpunit/phpunit=^7.5 installed even for PHP8 for which it is not compatible
 before_install:
-  - composer require "phpunit/phpunit=^7.5" "atk14/tester=^0.4" --ignore-platform-reqs
+  - composer update --dev
 
 script:
   - cd test && ../vendor/bin/run_unit_tests
